# guidr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  release-please-config.json
guidr-backend/: .env.example  .env.production.example  .gitignore  CHANGELOG.md  DEPLOY_RAILWAY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  run.py
guidr-backend/.github/workflows/: backend-ci.yml
guidr-backend/alembic/: env.py
guidr-backend/alembic/versions/: .gitkeep  001_initial_users_table.py  002_user_profile_academic_records.py  003_institutions_programs.py  004_documents.py  005_essays.py  006_two_factor_codes.py  007_password_history.py  008_recommendations.py  (+13 more)
guidr-backend/data/: seed_institutions.json  seed_programs.json
guidr-backend/docs/: COMPREHENSIVE_DATA_COLLECTION_GUIDE.md  ENRICHMENT_PIPELINE_VERIFICATION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  PIPELINE_GUIDE.md  PROFILE_COMPLETION_AND_PARSING.md  QUICK_START.md  R2_SETUP.md  RFC_AGENTIC_RESEARCH_PIVOT.md
guidr-backend/scripts/: batch_seed.py  clear_and_reseed.py  comprehensive_data_collection.py  load_scorecard_schools.py  quick_start_data_collection.py  reindex_search.py  reset_data.py  reset_pipeline_data.py  seed_data.py  seed_from_apis.py  set_admin.py  verify_pipeline_setup.py
guidr-backend/src/: __init__.py  config.py  db.py  main.py
guidr-backend/tests/: test_auth.py  test_ipeds_fetcher.py  test_llm_extractor.py  test_scorecard_api.py  test_scrape_disabled.py  test_search_service.py
(+350 files in other folders)
